Fix recipe reload (== instead of .equals bruh how did I ever pass Java Programming 101)